--- a/backend/myMoneAppAPI/myMoneAppAPI/packages.config
+++ b/backend/myMoneAppAPI/myMoneAppAPI/packages.config
@@ -7,9 +7,16 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core.pt-br" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost.pt-br" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="2.8.2" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Cors" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
 </packages>
